--- a/client/public/css/style.scss
+++ b/client/public/css/style.scss
@@ -87,7 +87,7 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  background-image: url(../images/hero-bg.jpg);
+  background-image: url(../images/jim-sprint-2.jpg);
   background-size: cover;
   background-attachment: fixed;
 }
