--- a/client/src/components/article-catalog/article-item/ArticleItem.module.css
+++ b/client/src/components/article-catalog/article-item/ArticleItem.module.css
@@ -1,95 +1,65 @@
 .article {
-  display: flex;
-  flex-direction: column;
   border: 1px solid #ddd;
-  border-radius: 12px;
-  overflow: hidden;
+  border-radius: 8px;
+  padding: 16px;
+  margin-bottom: 16px;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  margin-bottom: 24px;
+  transition: box-shadow 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 .article:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.title {
+  font-size: 24px;
+  margin-bottom: 8px;
+  color: #522633;
+  position: relative;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 .imageContainer {
-  position: relative;
+  width: 100%;
+  height: 250px; /* Set a fixed height for the image container */
   overflow: hidden;
-  border-bottom: 4px solid #522633;
+  border-radius: 8px;
+  margin-bottom: 16px;
 }
 
 .image {
   width: 100%;
-  height: auto;
-  object-fit: cover;
-  transition: transform 0.3s ease;
-}
-
-.imageContainer:hover .image {
-  transform: scale(1.1);
-}
-
-.textContainer {
-  padding: 20px;
-}
-
-.title {
-  font-size: 1.75rem;
-  margin-bottom: 10px;
-  color: #522633;
-  background: linear-gradient(45deg, #522633, #8f5d7d);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-weight: bold;
-  transition: color 0.3s ease, transform 0.3s ease;
-  position: relative;
-  overflow: hidden;
-}
-
-.title::before {
-  content: '';
-  position: absolute;
-  width: 100%;
   height: 100%;
-  top: 0;
-  left: -100%;
-  transition: all 0.5s ease;
-  z-index: 1;
-}
-
-.title:hover::before {
-  left: 100%;
-}
-
-.title:hover {
-  color: #8f5d7d;
-  transform: translateY(-2px);
+  object-fit: cover;
 }
 
 .content {
-  font-size: 1rem;
+  font-size: 16px;
   color: #555;
-  margin-bottom: 20px;
+  margin-bottom: 16px;
 }
 
 .detailsButton {
   display: inline-block;
   padding: 10px 20px;
+  border: none;
   border-radius: 4px;
   background-color: #522633;
   color: #fff;
-  font-size: 1rem;
+  font-size: 16px;
   text-align: center;
   text-decoration: none;
   cursor: pointer;
-  transition: background-color 0.3s ease, transform 0.3s ease;
+  transition: background-color 0.3s ease, transform 0.2s;
 }
 
 .detailsButton:hover {
-  color: white;
   background-color: #7a3750;
-  transform: translateY(-2px);
+  transform: scale(1.05);
 }
