--- a/client/src/components/article-catalog/article-item/ArticleItem.module.css
+++ b/client/src/components/article-catalog/article-item/ArticleItem.module.css
@@ -23,11 +23,13 @@
   position: relative;
   text-transform: uppercase;
   letter-spacing: 1px;
+  display: inline-block;
+  overflow: hidden;
 }
 
 .imageContainer {
   width: 100%;
-  height: 250px; /* Set a fixed height for the image container */
+  height: 250px;
   overflow: hidden;
   border-radius: 8px;
   margin-bottom: 16px;
@@ -60,6 +62,7 @@
 }
 
 .detailsButton:hover {
+  color: #fff;
   background-color: #7a3750;
   transform: scale(1.05);
 }
