--- a/client/src/components/home/latest-articles-carousel/LatestArticlesCarousel.module.css
+++ b/client/src/components/home/latest-articles-carousel/LatestArticlesCarousel.module.css
@@ -1,35 +1,53 @@
 .carouselContainer {
-  width: 65%;
-  margin: auto;
-  margin-bottom: 1rem;
-
-  position: relative;
+  background: linear-gradient(45deg, #522633, #7a3750);
+  padding: 40px;
+  color: #f3f3f3;
+  max-width: 70%;
+  margin: 0 auto;
+  margin-top: 35px;
+  border-radius: 5px;
 }
 
 .title {
   text-align: center;
-  font-size: 2rem;
-  margin-bottom: 1rem;
+  font-size: 2.5rem;
+  margin-bottom: 1.5rem;
+  color: #fff;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+  position: relative;
+  display: inline-block;
+  padding-bottom: 10px;
+  border-bottom: 2px solid #fff;
 }
 
 .slide {
   position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 700px;
-}
-
-.imageContainer {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+  text-align: center;
 }
 
 .image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  max-width: 100%;
+  border-radius: 8px;
+  transition: transform 0.3s ease-in-out;
+  max-height: 750px; 
+  object-fit: cover; 
+}
+
+.imageContainer {
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.imageContainer img {
+  max-width: 100%;
+  border-radius: 8px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.imageContainer img:hover {
+  transform: scale(1.05);
 }
 
 .overlay {
@@ -37,19 +55,20 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(50, 25, 37, 0.85);
   color: white;
   padding: 20px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  backdrop-filter: blur(5px);
 }
 
 .articleTitle {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   margin-bottom: 0.5rem;
+  color: #ffd700;
 }
 
 .content {
   font-size: 1rem;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-height: 4.5rem; /* approximately 3 lines */
 }
