--- a/client/src/components/article-details/ArticleDetails.module.css
+++ b/client/src/components/article-details/ArticleDetails.module.css
@@ -73,7 +73,8 @@
 }
 
 .button {
-  padding: 12px 20px;
+  padding: 10px 20px;
+  width: 120px;
   border: none;
   border-radius: 4px;
   background: #522633;
@@ -83,6 +84,7 @@
   transition: background 0.3s, transform 0.2s;
   text-decoration: none;
   text-align: center;
+  margin: 0 10px;
 }
 
 .button:hover {
