--- a/client/src/components/header/Header.module.css
+++ b/client/src/components/header/Header.module.css
@@ -1,8 +1,9 @@
 header {
-  margin: 30px 0;
+  /* margin: 30px 0; */
+  margin-bottom: 30px;
   background: linear-gradient(to right, #522633, #7a3750);
   color: #fff;
-  padding: 15px 0;
+  /* padding: 10px 0; */
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
