--- a/client/src/components/article-details/ArticleDetails.module.css
+++ b/client/src/components/article-details/ArticleDetails.module.css
@@ -108,6 +108,7 @@
   display: flex;
   align-items: center;
   margin-top: 20px;
+  
 }
 
 .likeButton {
@@ -116,9 +117,13 @@
   color: white;
   padding: 10px 20px;
   cursor: pointer;
-  margin-right: 10px;
   border-radius: 4px;
   transition: background 0.3s, transform 0.2s;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
 
 .likeButton:hover {
@@ -142,4 +147,11 @@
 .likes span {
   font-size: 1rem;
   color: #555;
+}
+
+.likeCount {
+  margin-top: 10px;
+  margin-left: 10px;
+  font-size: 1rem;
+  color: #fff;
 }
