add styles to navigation header

--- a/client/src/components/header/Header.module.css
+++ b/client/src/components/header/Header.module.css
@@ -7,6 +7,10 @@ header {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
+.headerStyle {
+  justify-content: flex-end;
+}
+
 /* Styling for the logo container */
 .logoContainer {
   display: flex;
