--- a/client/src/components/header/Header.module.css
+++ b/client/src/components/header/Header.module.css
@@ -7,9 +7,9 @@ header {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.headerStyle {
+/* .headerStyle {
   justify-content: flex-end;
-}
+} */
 
 /* Styling for the logo container */
 .logoContainer {
